# SIWR_Labirynt

./: README.md
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: my_robot_gazebo.launch.xml
my_robot_bringup/world/: Labirynt.world
my_robot_cartographer/: CMakeLists.txt  package.xml
my_robot_cartographer/config/: amcl.yaml  slam.yaml
my_robot_cartographer/launch/: amcl.launch.py  pose.launch.py  slam.launch.py
my_robot_cartographer/maps/: map.pgm  map.yaml  map_serialized.data
my_robot_cartographer/my_robot_pose/: my_robot_pose.py
my_robot_cartographer/rviz/: amcl.rviz  slam.rviz
my_robot_description/: CMakeLists.txt
my_robot_description/urdf/: imu.xacro  lidar.xacro  mobile_base.xacro  my_robot.urdf.xacro
my_robot_pos/: CMakeLists.txt  package.xml
my_robot_pos/src/: robot_pos.cpp
robot_control/launch/: auto_control.launch.py
robot_control/robot_control/: auto_control.py  control.py
src/my_robot_bringup/: package.xml
src/my_robot_bringup/launch/: my_robot_gazebo.launch.xml
src/my_robot_bringup/rviz/: seting.rviz
src/my_robot_bringup/world/: test.world
src/my_robot_description/: package.xml
src/my_robot_description/launch/: display.launch.xml
src/my_robot_description/rviz/: seting.rviz
src/my_robot_description/urdf/: camera.xacro  lidar.xacro  mobile_base_gazebo.xacro  properties.xacro
src/robot_control/: package.xml  setup.py
src/robot_control/robot_control/: control.py  map.py
