<?xml version="1.0"?>
<package format="2">
  <name>my_robot_cartographer</name>
  <version>0.0.0</version>
  <description>The my_robot_cartographer package</description>
  <maintainer email="nosal101@wp.pl">krzysztof</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>my_robot_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
 